# Setu

./: .env.example  .gitignore  Cargo.toml  README.md  commit.sh
api/: README.md
api/src/: handlers.rs  lib.rs  types.rs
consensus/: Cargo.toml
consensus/src/: anchor_builder.rs  broadcaster.rs  dag.rs  dag_manager.rs  engine.rs  folder.rs  lib.rs  merkle_integration.rs  recent_cache.rs  root_executor.rs  router.rs  tee_verifier.rs  validator_set.rs  vlc.rs
consensus/src/liveness/: leader_reputation.rs  mod.rs  proposer_election.rs  rotating_proposer_election.rs
consensus/src/pocw/: emission.rs  flux_burn.rs  fold_observer.rs  mod.rs  power.rs  processor.rs  scoring.rs
crates/setu-enclave/: Cargo.toml
crates/setu-keys/: Cargo.toml
crates/setu-merkle/: Cargo.toml  README.md
crates/setu-merkle/src/: aggregation.rs  binary.rs  error.rs  hash.rs  lib.rs  sparse.rs  storage.rs
crates/setu-move-vm/: build.rs
crates/setu-network-anemo/: Cargo.toml
crates/setu-protocol/: Cargo.toml
crates/setu-protocol/src/: codec.rs  lib.rs  solver_http.rs  version.rs
crates/setu-runtime/: Cargo.toml  VM.md  VM_SPEC.md
deploy/: .env.example
deploy/dev-mult/: bench.sh  build.sh  clean.sh  config.sh  deploy.sh  genesis-remote.json  genesis-single.json  keygen.sh  logs.sh  restart.sh  setup.sh  start.sh  status.sh  stop.sh  update.sh
docker/scripts/: README.md
docs/: RESOURCE_ROUTING_EXPLAINED.md  SHARD_ROUTING_DESIGN.md  mvp-architecture.md  relay-events-specification.md  router-implementation-analysis.md
examples/: system_integration.rs
examples/move/: README.md
netcore/: Cargo.toml
network/: Cargo.toml
scripts/: deploy_with_keys.sh  start.sh  start_nodes.sh
setu-benchmark/: Cargo.toml  README.md
setu-benchmark/benches/: tps_bench.rs
setu-benchmark/src/: benchmark.rs  client.rs  config.rs  metrics.rs  report.rs
setu-cli/: Cargo.toml  README.md
setu-explorer/: Cargo.toml  README.md
setu-explorer/src/: main.rs
setu-explorer/src/api/: account.rs  anchors.rs  dag.rs  events.rs  mod.rs  nodes.rs  search.rs  stats.rs  types.rs
setu-explorer/src/config/: mod.rs
setu-explorer/src/storage/: mod.rs
setu-router/: Cargo.toml
setu-rpc/: Cargo.toml
setu-solver/: Cargo.toml
setu-validator/: Cargo.toml  README.md
storage/: Cargo.toml  README.md
types/: Cargo.toml
(+225 files in other folders)
