[workspace]
members = [
    "types",
    "crates/vlc",        # VLC Hybrid Logical Clock Library
    "crates/core-types",
    "consensus",
    "network",
    "storage",
    "setu-solver",
    "setu-validator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
