[package]
name = "consensus"
version.workspace = true
edition.workspace = true

[dependencies]
setu-types = { path = "../types" }
setu-vlc = { path = "../crates/setu-vlc" }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
